SET(LIBHELLO_SRC hello.cpp)

# 构建动态库和静态库
ADD_LIBRARY(hello SHARED ${LIBHELLO_SRC})
ADD_LIBRARY(hello_static STATIC ${LIBHELLO_SRC})

# 将添加hello_static动态库的名字修改成hello
SET_TARGET_PROPERTIES(hello_static PROPERTIES OUTPUT_NAME "hello")

# 将OUTPUT_NAME作为值赋给OUTPUT_VALUE
GET_TARGET_PROPERTY(OUTPUT_VALUE hello_static OUTPUT_NAME)
MESSAGE(STATUS "This is the hello_static OUTPUT_NAME:" ${OUTPUT_VALUE})

# cmake在构建一个新的target时，会尝试清理掉其他使用改名字的库
# 为了回避这个问题，再次使用SET_TARGET_PROPERTIES定义CLEAN_DIRECT_OUTPUT属性
SET_TARGET_PROPERTIES(hello PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(hello_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)

# 添加动态库版本号
SET_TARGET_PROPERTIES(hello PROPERTIES VERSION 1.2 SOVERSION 1)

# 添加可执行文件
#ADD_EXECUTABLE(t3 hello.cc)

#安装共享库和头文件
INSTALL(TARGETS hello hello_static
	LIBRARY DESTINATION lib
	ARCHIVE DESTINATION lib)

INSTALL(FILES hello.h DESTINATION include/hello)
